--- a/index.html
+++ b/index.html
@@ -690,7 +690,7 @@
    		<div class="col-twelve">
 
             <!-- form -->
-            <form action="https://formsubmit.co/92074aeb89af7312a3754a0fd7bac89d" method="POST" />
+            <form action="https://formsubmit.co/ifaaaziz@gmail.com" method="POST" />
       			<fieldset>
 
                   <div class="form-field">
