--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
    				</li>
    				<li>
    					<strong>Website:</strong>
-   					<span>www.kardswebsite.com</span>
+   					<span>aziz-ifa.github.io/az/</span>
    				</li>
    				<li>
    					<strong>Email:</strong>
